Changelog
=========

9.7.dev0 - (unreleased)
-----------------------

9.6 - (2015-09-22)
------------------
* Bugfix: removed initialization of Figure.Load which is directly loaded when needed
  by eeafigure_view and eeafigurefile_view
  [ichimdav refs #28953]
* Bugfix: Fixed error on the @@convertFigures view.
  [chiridra refs #28806]
* Bug fix: Pillow 2.9.0 implemented eps patch but has a resolution issue. Re-added a patch'
           Fix patch to work with pillow 2.9.0
  [lucas refs #28893]

9.5 - (2015-09-10)
------------------
* Change: cleaned dataservice.view.js of leftover jqzoom code and added basic info
  about the intent of the file and it's external dependency
  [ichimdav refs #27220]
* Bugfix: Pillow 2.9.0 implemented eps patch, then it is not be needed and removed. Pin Pillow into version.cfg buildout
  [lucas, refs #21636]
* Change: cleaned dataservice_styles.css of uneeded styles
  [ichimdav refs #27220]

9.4 - (2015-08-18)
------------------
* Change: Title is now used as the label of DataFiles found within Data
  instead of the field name
  [ichimdav refs #27927]
* Feature: Add link to DaViz Visualisation on Organisation view
  [lucas, refs #27622]

9.3 - (2015-07-30)
------------------
* Bugfix: Fix download permssion on EEAFigureFile
  [lucas, refs #27617]

9.2 - (2015-07-28)
------------------
* Bugfix: pylint compile
  [lucas refs #27245]

9.1 - (2015-07-06)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [ichimdav #22596]
* Change: removed sendWorkflowEmail method calling as well as the
  frontpage_workflow_scripts module because the functionality can be
  triggered with content rules
  [ichimdav refs #22596]

9.0 - (2015-04-28)
------------------
* Bugfix: Fixed mimetype in rdf export for files, including files inside zip
  [szabozo0 refs #20674]

8.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script