@@ -3,7 +3,9 @@ Changelog
 
 9.7.dev0 - (unreleased)
 -----------------------
-
+* Bugfix: set socket timeout to prevent hanging out connection on xmlrpc calling
+  [lucas refs #29063]
+  
 9.6 - (2015-09-22)
 ------------------
 * Bugfix: removed initialization of Figure.Load which is directly loaded when needed
